--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,6 +1,7 @@
 .hero-section {
-    background-color: var(--color-secondary-black); 
-    min-height: calc(100vh - 60px); /* 100% de la altura de la vista menos la altura del header (aprox) */
+    background-color: var(--color-secondary-black);
+    min-height: calc(100vh - 60px);
+    /* 100% de la altura de la vista menos la altura del header (aprox) */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,23 +11,28 @@
 }
 
 .hero-title {
-    color: var(--color-accent); 
-    font-size: 8rem; 
+    color: var(--color-accent);
+    font-size: 9rem;
     margin-bottom: 0;
-    animation: zoomInFade 1.5s ease-out forwards;
+    animation: glow 2s ease-in-out infinite alternate;
 }
 
 .hero-subtitle {
-    color: var(--color-accent); 
+    color: var(--color-accent);
     font-size: 4rem;
     margin-top: 0;
     margin-bottom: 7rem;
     font-family: var(--font-display);
 }
 
+.text-focus-in {
+    -webkit-animation: text-focus-in 2s ease-in 0.5s both;
+    animation: text-focus-in 2s ease-in 0.5s both;
+}
+
 .hero-cta-button {
-    background-color: var(--color-accent); 
-    color: var(--color-secondary-white); 
+    background-color: var(--color-accent);
+    color: var(--color-secondary-white);
     text-decoration: none;
     padding: 1rem 2rem;
     border-radius: 5px;
@@ -36,18 +42,47 @@
 }
 
 .hero-cta-button:hover {
-    background-color: color-mix(in srgb, var(--color-accent) 80%, var(--color-secondary-black));
+    background-color: color-mix(in srgb, var(--color-accent) 70%, var(--color-secondary-black));
 }
 
-/* Animación Zoom-in para el Título */
+/* Animación glow para el Título */
 
-@keyframes zoomInFade {
-    0% {
-        opacity: 0;
-        transform: scale(0.95);
+@keyframes glow {
+    from {
+        text-shadow: 0 0 20px #e92e16;
     }
+
+    to {
+        text-shadow: 0 0 30px #f0270c, 0 0 10px #be1b05;
+    }
+}
+
+/* Animación focus-in para el subtítulo */
+
+@-webkit-keyframes text-focus-in {
+    0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+    }
+
     100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
         opacity: 1;
-        transform: scale(1);
+    }
+}
+
+@keyframes text-focus-in {
+    0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
     }
 }
