--- a/src/components/SubscriptionsSection.css
+++ b/src/components/SubscriptionsSection.css
@@ -7,7 +7,7 @@
 .subscriptions-header-block {
     background-size: cover;
     background-position: center;
-    padding: 6rem 2rem 4rem; 
+    padding: 6rem 2rem; 
     position: relative; 
     color: var(--color-secondary-white); 
 }
