--- a/src/components/FAQSection.css
+++ b/src/components/FAQSection.css
@@ -1,5 +1,5 @@
 .faq-section {
-    background-color: var(--color-secondary-white); /* Fondo Blanco */
+    background-color: var(--color-secondary-light);
     padding: 6rem 0;
     width: 100%;
 }
