--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Kapakana:wght@300..400&family=Libre+Caslon+Display&display=swap');
 
 *,
 *::before,
@@ -31,8 +30,8 @@ dd {
     --color-secondary-white: #FFFFFF;
 
     /* Tipografía */
-    --font-body: 'Libre Caslon Display', serif;
-    --font-display: 'Kapakana', sans-serif;
+    --font-body: 'Libre Caslon Display', Georgia, 'Times New Roman', serif;
+    --font-display: 'Kapakana','Garamond' sans-serif;
 }
 
 html {
