--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .main-footer {
     background-color: var(--color-primary-dark);
-    color: var(--color-secondary-light);
+    color: white;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -111,7 +111,7 @@
 .club-title {
     font-family: var(--font-display);
     text-align: center;
-    font-size: 5.5rem;
+    font-size: 4rem;
     font-weight: normal;
     margin-bottom: 4rem; /* Reducido para igualar al bloque superior */
 }
@@ -168,4 +168,14 @@
     text-align: center;
     font-size: 0.85rem;
     opacity: 0.7;
+}
+
+.footer-bottom a{
+    text-decoration: none;
+    color: white;
+}
+
+.icon-white img{
+    width: 3rem;
+    align-items: center;
 }
