--- a/src/components/AspirationalBlock.css
+++ b/src/components/AspirationalBlock.css
@@ -18,18 +18,27 @@
     display: flex;
     flex-direction: column;
     text-align: left;
+    transition: opacity 0.8s ease;
+}
+
+.aspirational-grid:hover .aspirational-card:not(:hover) {
+    opacity: 0.7;
 }
 
 .card-image {
     width: 100%;
-    height: 350px; /* Altura fija para uniformidad */
+    height: 380px; /* Altura fija para uniformidad */
     object-fit: cover; 
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.8rem;
+    border-radius: 8px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.05);
 }
 
 .card-title {
     font-family: var(--font-body); 
-    font-size: 1.8rem;
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-transform: none;
     margin-bottom: 1rem;
     color: var(--color-primary-dark);
 }
@@ -41,11 +50,13 @@
     margin-bottom: 0.5rem;
 }
 
-.signature-text {
-    font-family: var(--font-display); 
-    color: var(--color-accent); 
-    font-size: 1.5rem;
+.card-text-signature {
+    font-family: var(--font-display); /* Tu fuente cursiva/display */
+    font-size: 1.6rem;
+    color: var(--color-accent);
     margin-top: 1rem;
+    font-style: italic;
+    font-weight: 600;
 }
 
 
@@ -53,8 +64,8 @@
 
 .join-ritual-block {
     display: grid;
-    grid-template-columns: 1fr 1fr; 
-    gap: 4rem;
+    grid-template-columns: 1fr 1.2fr; 
+    gap: 6rem;
     align-items: center;
     padding: 0 2rem 6rem;
     /* padding-bottom: 6rem; */
@@ -63,15 +74,36 @@
     background-color: var(--color-secondary-light);
 }
 
+.ritual-image-content{
+    position: relative;
+}
+
+.ritual-image-content::after {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    right: -20px;
+    bottom: -20px;
+    border: 1px solid var(--color-accent);
+    z-index: -1;
+    border-radius: 4px;
+}
+
 .ritual-image {
     width: 100%;
-    height: auto;
+    height: 380px;
+    object-fit: cover;
     display: block;
+    border-radius: 8px;
+    box-shadow: 0 15px 40px rgba(0,0,0,0.1);
 }
 
 .ritual-title {
     font-family: var(--font-display); 
-    font-size: 3rem;
+    font-size: 3.5rem;
+    font-style: italic;
+    line-height: 1.1;
     margin-bottom: 1.5rem;
     color: var(--color-primary-dark);
 }
@@ -93,7 +125,7 @@
     
     background-color: transparent; 
     border: 2px solid var(--color-accent);
-    border-radius: 5px;
+    border-radius: 8px;
     text-decoration: none;
     
     color: var(--color-accent);
