--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,16 +64,16 @@ section[id] {
     scroll-margin-top: 0;
 }
 
-/* Estilo base para el estado de carga */
+/* Estilo base para el estado de carga
 .form-cta-button:disabled,
 .footer-submit-btn:disabled {
     cursor: not-allowed;
     position: relative;
     overflow: hidden; /* Para que la animación no se salga del botón */
-    color: #fff;
-    border-color: #444;
+    /* color: #fff;
+    border-color: #444; */
     /* Creamos un degradado que moveremos con la animación */
-    background: linear-gradient(
+    /* background: linear-gradient(
         90deg, 
         #1a1a1a 0%, 
         #4a0e0e 50%, 
@@ -81,14 +81,14 @@ section[id] {
     );
     background-size: 200% 100%;
     animation: loading-sweep 1.5s infinite linear;
-}
+} */
 
 /* Animación que desplaza el fondo de izquierda a derecha */
-@keyframes loading-sweep {
+/* @keyframes loading-sweep {
     0% {
         background-position: 200% 0;
     }
     100% {
         background-position: -200% 0;
     }
-}
+} */
